Add moveable steps

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -186,6 +186,7 @@
             <label for="stepDescription">Description (optional)</label>
             <input type="text" id="stepDescription" placeholder="Login to the application" />
           </div>
+          <div id="stepValidationError" class="validation-error hidden"></div>
         </div>
         <div class="modal-footer">
           <button type="button" id="saveStepBtn" class="btn btn-primary">Add Step</button>
