--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -11,8 +11,14 @@
   <div class="app-container">
     <!-- Header -->
     <header class="app-header">
-      <h1>📄 UI Tester</h1>
-      <p class="subtitle">Document Upload Automation Tool</p>
+      <div class="header-content">
+        <h1>📄 UI Tester</h1>
+        <p class="subtitle">Document Upload Automation Tool</p>
+      </div>
+      <div class="header-actions">
+        <button type="button" id="loadConfigBtn" class="btn btn-secondary">📂 Load Config</button>
+        <button type="button" id="saveConfigBtn" class="btn btn-secondary">💾 Save Config</button>
+      </div>
     </header>
 
     <!-- Main Content -->
