Add config file name visibility

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -16,6 +16,7 @@
         <p class="subtitle">Document Upload Automation Tool</p>
       </div>
       <div class="header-actions">
+        <span id="currentConfigName" class="current-config-name"></span>
         <button type="button" id="loadConfigBtn" class="btn btn-secondary">📂 Load Config</button>
         <button type="button" id="saveConfigBtn" class="btn btn-secondary">💾 Save Config</button>
       </div>
