Update fill and and type to have isSecret flag

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -184,6 +184,12 @@
           <div class="form-group hidden" id="stepValueGroup">
             <label for="stepValue">Value</label>
             <input type="text" id="stepValue" placeholder="Enter value" />
+            <div class="checkbox-inline" id="stepSecretGroup">
+              <label>
+                <input type="checkbox" id="stepIsSecret" />
+                Mark as secret (value will not be saved to config file)
+              </label>
+            </div>
           </div>
           <div class="form-group hidden" id="stepDurationGroup">
             <label for="stepDuration">Duration (ms)</label>
