--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -183,7 +183,10 @@
           </div>
           <div class="form-group hidden" id="stepValueGroup">
             <label for="stepValue">Value</label>
-            <input type="text" id="stepValue" placeholder="Enter value" />
+            <div class="input-with-toggle">
+              <input type="text" id="stepValue" placeholder="Enter value" />
+              <button type="button" id="toggleValueVisibility" class="btn-toggle-visibility" title="Show/Hide value">👁</button>
+            </div>
             <div class="checkbox-inline" id="stepSecretGroup">
               <label>
                 <input type="checkbox" id="stepIsSecret" />
